# ctk

./: .gitignore  CMakeLists.txt  GUIDELINES.md  README.md  build.sh
.cache/clangd/index/: display.c.22DB73FA35AE0F95.idx  display.c.8D7D62C2B46BCBF1.idx  display.h.7504C08ABF2C1716.idx  display.h.C74D8696ACFE1B5E.idx  display.h.EF1CBF15C99AF518.idx  display.h.FDE5471AD5753800.idx  env.c.681E0E626C3FFE89.idx  env.h.9E09190DC3B799D3.idx  env.h.CBDA533D9A69AF16.idx  error.c.D1076D10F3C48BEF.idx  error.c.F2B280148E2D8725.idx  error.h.11E841955A733CDC.idx  error.h.8624B10C4333034E.idx  error.h.C3BD6A0128366C08.idx  io.c.2ACB13DE7579CAC5.idx  io.c.84D4189D4B56D7B9.idx  io.h.051C3630CF940410.idx  io.h.94B6C5CB2FA55A38.idx  io.h.9C3F1ECC9F3C442F.idx  io.h.F8A68CAB2B211C40.idx  memory.c.79019599B2166563.idx  memory.c.A1A8411A000EB363.idx  memory.h.3336EE7EE47A59C3.idx  memory.h.C4491FC3B9FCEFD6.idx  memory.h.F1905FCDAA8E0CA1.idx  path.c.C600F1068040B54F.idx  path.h.1A057476E40E44C9.idx  path.h.E3AE4C256DD10888.idx  string.c.23D9216F27D64D36.idx  string.c.C9E9495C6095C179.idx  string.h.25AEC4C8D83029D5.idx  string.h.7B541595BA26FED8.idx  string.h.9D93C6D314B4EE17.idx  string.h.D28AA043049992BF.idx  type.h.3817F06603DABE3B.idx  type.h.96F6374EA248B562.idx  type.h.A790215A8F0139BD.idx  type.h.EB7CBFBCEB34A9C5.idx  vector.h.59E47190F66846BD.idx  vector.h.B5C62A9084582EF8.idx
src/collection/: vector.h
src/core/: error.c  error.h  memory.c  memory.h
src/io/: display.c  io.c  path.c
src/os/: env.c
src/string/: string.c
test/: .clang-format  CMakeLists.txt  test_path.c  test_string.c
test/.cache/clangd/index/: raw.c.E505514C321DDA2D.idx  string.c.AB66ED7BDAFE26DF.idx  string.c.CF59F3CCCFB2F6B5.idx  test_path.c.8EACBA2315C39B88.idx  test_string.c.F11D24F8F81826A3.idx
